--- a/package.json
+++ b/package.json
@@ -10,6 +10,16 @@
     "deploy": "bash deploy.sh"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "BaoTao1997",
+  "license": "ISC",
+  "devDependencies": {
+    "@vuepress/plugin-back-to-top": "^1.0.0-rc.1",
+    "@vuepress/plugin-medium-zoom": "^1.0.0-rc.1",
+    "husky": "^1.3.1",
+    "lint-md": "^0.1.0",
+    "prettier": "1.15.3"
+  },
+  "dependencies": {
+    "vuepress": "^1.0.2"
+  }
 }
